--- a/MiniCodeColumn/MiniCodeColumn/MiniCodeColumn.csproj
+++ b/MiniCodeColumn/MiniCodeColumn/MiniCodeColumn.csproj
@@ -68,6 +68,9 @@
       <DependentUpon>CodeToolWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="Line.cs" />
+    <Compile Include="MiniCodeColPlugIn.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="PluginOptions.cs">
       <SubType>UserControl</SubType>
     </Compile>
