--- a/UnitTestErrorVisualizer/UnitTestVisualizer.Tests/UnitTestVisualizer.Tests.csproj
+++ b/UnitTestErrorVisualizer/UnitTestVisualizer.Tests/UnitTestVisualizer.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{8D6BBE93-262B-4D03-8976-67E8F0ABA2C5}</ProjectGuid>
+    <ProjectGuid>{52AA49DE-3179-4EDA-B2A6-D28CCC50C0FC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTestErrorVisualizer</RootNamespace>
-    <AssemblyName>UnitTestErrorVisualizer</AssemblyName>
+    <RootNamespace>UnitTestVisualizer.Tests</RootNamespace>
+    <AssemblyName>UnitTestVisualizer.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\Public\Documents\DevExpress\IDE Tools\Community\PlugIns</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\..\..\Public\Documents\DevExpress\IDE Tools\Community\PlugIns</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -42,45 +42,30 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="EnvDTE" />
-    <Reference Include="EnvDTE80" />
-    <Reference Include="DevExpress.CodeRush.Common" />
-    <Reference Include="DevExpress.CodeRush.Core" />
-    <Reference Include="DevExpress.CodeRush.PlugInCore" />
-    <Reference Include="DevExpress.CodeRush.StructuralParser" />
-    <Reference Include="DevExpress.CodeRush.VSCore" />
+    <Reference Include="xunit, Version=1.5.0.1479, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\xunit.dll</HintPath>
+    </Reference>
+    <Reference Include="xunit.extensions, Version=1.5.0.1479, Culture=neutral, PublicKeyToken=8d05b1bb7a6fdb6c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\xunit.extensions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PlugIn1.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="PlugIn1.Designer.cs">
-      <DependentUpon>PlugIn1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="ActualValueParser.cs" />
+    <Compile Include="DifferAtParser.cs" />
+    <Compile Include="ExpectedValueParser.cs" />
+    <Compile Include="LineNumberParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="OptUnitTestVisualizer.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="OptUnitTestVisualizer.Designer.cs">
-      <DependentUpon>OptUnitTestVisualizer.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TestResultParser.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="PlugIn1.resx">
-      <DependentUpon>PlugIn1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="OptUnitTestVisualizer.resx">
-      <DependentUpon>OptUnitTestVisualizer.cs</DependentUpon>
-    </EmbeddedResource>
+    <ProjectReference Include="..\UnitTestErrorVisualizer\UnitTestErrorVisualizer.csproj">
+      <Project>{8D6BBE93-262B-4D03-8976-67E8F0ABA2C5}</Project>
+      <Name>UnitTestErrorVisualizer</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Invisible.ico" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
