--- a/trunk/CR_TestDrivenDevelopmentTools/CR_TestDrivenDevelopmentTools/CR_TestDrivenDevelopmentTools.csproj
+++ b/trunk/CR_TestDrivenDevelopmentTools/CR_TestDrivenDevelopmentTools/CR_TestDrivenDevelopmentTools.csproj
@@ -76,7 +76,11 @@
     <Reference Include="VSLangProj, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeclareClassInSpecificProject.cs" />
+    <Compile Include="DeclareTypeInSpecificProjectBase.cs" />
     <Compile Include="MoveTypeToFileInSpecificProject.cs" />
+    <Compile Include="NamespaceServices.cs" />
+    <Compile Include="ProjectServices.cs" />
     <Compile Include="TestDrivenDevelopmentTools.cs">
       <SubType>Component</SubType>
     </Compile>
