--- a/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
+++ b/trunk/CR_StyleCop/CR_StyleCop/CR_StyleCop.csproj
@@ -35,9 +35,10 @@
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="Extensibility, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-    <Reference Include="Microsoft.StyleCop, Version=4.3.2.1, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Microsoft.StyleCop, Version=4.3.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Program Files\Microsoft StyleCop 4.3.2.1\Microsoft.StyleCop.dll</HintPath>
+      <HintPath>..\..\..\..\..\Program Files\Microsoft StyleCop 4.3.3.0\Microsoft.StyleCop.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -57,6 +58,7 @@
     <Reference Include="DevExpress.CodeRush.VSCore" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeIssues\KeywordCodeIssue.cs" />
     <Compile Include="CodeIssues\OpeningCurlyBracketCodeIssue.cs" />
     <Compile Include="CodeIssues\SA1500CodeIssue.cs" />
     <Compile Include="CodeIssues\SA1501CodeIssue.cs" />
@@ -68,7 +70,11 @@
     <Compile Include="CodeIssues\ClosingCurlyBracketCodeIssue.cs" />
     <Compile Include="CodeIssues\SA1508CodeIssue.cs" />
     <Compile Include="CodeIssues\SA1509CodeIssue.cs" />
+    <Compile Include="CodeIssues\SA1510CodeIssue.cs" />
+    <Compile Include="CodeIssues\SA1511CodeIssue.cs" />
+    <Compile Include="CodeIssues\SA1512CodeIssue.cs" />
     <Compile Include="CodeIssues\SA1513CodeIssue.cs" />
+    <Compile Include="CodeIssues\SA1515CodeIssue.cs" />
     <Compile Include="CodeIssues\SA1600CodeIssue.cs" />
     <Compile Include="CodeIssues\SA1601CodeIssue.cs" />
     <Compile Include="CodeIssues\SA1602CodeIssue.cs" />
@@ -105,6 +111,7 @@
     <Compile Include="CodeIssues\SA1645CodeIssue.cs" />
     <Compile Include="CodeIssues\SA1646CodeIssue.cs" />
     <Compile Include="CodeIssues\SA1647CodeIssue.cs" />
+    <Compile Include="CodeIssues\SingleLineCommentCodeIssue.cs" />
     <Compile Include="CR_StyleCopPlugIn.cs">
       <SubType>Component</SubType>
     </Compile>
